--- a/BeezratHashem/Drivers/BlDriver/BlDriver.csproj
+++ b/BeezratHashem/Drivers/BlDriver/BlDriver.csproj
@@ -6,4 +6,10 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="BlApi\" />
+    <Folder Include="BlModels\" />
+    <Folder Include="BlServices\" />
+  </ItemGroup>
+
 </Project>
